[package]
name = "rust-tfidf"
repository = "https://github.com/ferristseng/rust-tfidf"
version = "1.1.1"
authors = ["Ferris Tseng <ferristseng@gmail.com>"]
keywords = ["tfidf", "text", "document", "statistic"]
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "Library to calculate TF-IDF (Term Frequency - Inverse Document Frequency) for generic documents"

[lib]
name = "tfidf"

[dependencies]
